--- a/KiemTra/app/src/main/res/layout/activity_product_list.xml
+++ b/KiemTra/app/src/main/res/layout/activity_product_list.xml
@@ -1,8 +1,5 @@
-<!--//23162028 - cao dang huy-->
-
-
 <?xml version="1.0" encoding="utf-8"?>
-
+<!--    23162028 - Cao Đăng Huy-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
