--- a/KiemTra/app/src/main/res/layout/item_product.xml
+++ b/KiemTra/app/src/main/res/layout/item_product.xml
@@ -1,5 +1,5 @@
-<!--23162028 - cao dang huy-->
 <?xml version="1.0" encoding="utf-8"?>
+<!--    23162028 - Cao Đăng Huy-->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
