--- a/KiemTra/app/src/main/res/layout/activity_main.xml
+++ b/KiemTra/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--Đỗ Đoàn Duy Hoàng MSSV: 23161025-->
+
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -22,6 +26,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="20dp">
 
+            <!-- 1. Header: Lời chào -->
             <TextView
                 android:id="@+id/tvGreeting"
                 android:layout_width="0dp"
@@ -37,6 +42,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <!-- 2. Subtitle: Tên Shop -->
             <TextView
                 android:id="@+id/tvSubtitle"
                 android:layout_width="wrap_content"
@@ -47,6 +53,7 @@
                 app:layout_constraintStart_toStartOf="@+id/tvGreeting"
                 app:layout_constraintTop_toBottomOf="@+id/tvGreeting" />
 
+            <!-- 3. Avatar -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardAvatar"
                 android:layout_width="50dp"
@@ -61,10 +68,11 @@
                     android:id="@+id/imgAvatar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_launcher_background"
+                    android:src="@drawable/user"
                     android:scaleType="centerCrop" />
             </androidx.cardview.widget.CardView>
 
+            <!-- 4. Thanh tìm kiếm -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardSearch"
                 android:layout_width="match_parent"
@@ -89,6 +97,7 @@
                     android:inputType="text"/>
             </androidx.cardview.widget.CardView>
 
+            <!-- 5. Banner Quảng Cáo -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardBanner"
                 android:layout_width="match_parent"
@@ -110,15 +119,48 @@
             </androidx.cardview.widget.CardView>
 
 
+            <!-- === PHẦN THÊM MỚI: CATEGORY (Hãng sản xuất) === -->
+
+            <!-- Tiêu đề -->
+            <TextView
+                android:id="@+id/tvCatTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hãng sản xuất"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/cardBanner"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <!-- KHUNG DANH SÁCH  -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcvCategory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:clipToPadding="false"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/tvCatTitle"/>
+
+            <!-- === KẾT THÚC PHẦN CATEGORY === -->
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
                 android:gravity="center"
-                android:text="Danh sách món ăn sẽ ở đây..."
-                app:layout_constraintTop_toBottomOf="@+id/cardBanner"/>
+                android:text="Danh sách điện thoại nổi bật..."
+                app:layout_constraintTop_toBottomOf="@+id/rcvCategory"/> <!-- ĐÃ SỬA: Nằm dưới rcvCategory -->
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
+
+    <!-- PHẦN 2: THANH MENU DƯỚI ĐÁY -->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
@@ -154,9 +196,9 @@
                     android:gravity="center">
                     <ImageView
                         android:id="@+id/imgHome"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/homeBtn"/>
+                        android:layout_width="29dp"
+                        android:layout_height="29dp"
+                        android:src="@drawable/homebtn"/>
                     <TextView
                         android:id="@+id/tvHome"
                         android:layout_width="match_parent"
@@ -178,7 +220,7 @@
                         android:id="@+id/imgProfile"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/profileBtn"/>
+                        android:src="@drawable/profilebtn"/>
                     <TextView
                         android:id="@+id/tvProfile"
                         android:layout_width="match_parent"
@@ -208,7 +250,7 @@
                         android:id="@+id/imgSupport"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/supportBtn"/>
+                        android:src="@drawable/supportbtn"/>
                     <TextView
                         android:id="@+id/tvSupport"
                         android:layout_width="match_parent"
@@ -230,7 +272,7 @@
                         android:id="@+id/imgSetting"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/settingBtn"/>
+                        android:src="@drawable/settingbtn"/>
                     <TextView
                         android:id="@+id/tvSetting"
                         android:layout_width="match_parent"
@@ -248,7 +290,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#FF4B3A"
-            android:src="@drawable/fabCart"
+            android:src="@drawable/fabcart"
             app:tint="@android:color/black"
             app:maxImageSize="30dp"
             app:elevation="6dp"
