--- a/week3_1/app/src/main/res/layout/row_image.xml
+++ b/week3_1/app/src/main/res/layout/row_image.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="3dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/inv_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#95a5a6" />
+
+</FrameLayout>
